DFG non-speculative JIT does not optimize PutByVal https://bugs.webkit.org/show_bug.cgi?id=65424

Reviewed by Gavin Barraclough.

Added code to emit PutByVal inline fast path.

* dfg/DFGNonSpeculativeJIT.cpp:
(JSC::DFG::NonSpeculativeJIT::compile):


Canonical link: https://commits.webkit.org/81228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92085 268f45cc-cd09-0410-ab3c-d52691b4dbfc